--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ url: https://KarlTheFish.github.io/esp32-oppematerjal
 
 aux_links: # remove if you don't want this link to appear on your pages
   Template Repository: https://github.com/KarlTheFish/esp32-oppematerjal
+
+color_scheme: dark
