--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: ESP32 asjade interneti õppematerjal
 description: YOUR DESCRIPTION
 theme: just-the-docs
 
-url: https://KarlTheFish.github.io/esp32-oppematerjal
+url: https://karlthefish.github.io/esp32-oppematerjal
 
 aux_links: # remove if you don't want this link to appear on your pages
   Template Repository: https://github.com/KarlTheFish/esp32-oppematerjal
