--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,11 @@ aux_links: # remove if you don't want this link to appear on your pages
   Template Repository: https://github.com/KarlTheFish/esp32-oppematerjal
 
 color_scheme: dark
+
+callouts:
+  info:
+    title: Lisainfo
+    color: blue
+  important:
+    title: Tähtis!
+    color: red
