--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: ESP32 asjade interneti õppematerjal
-description: YOUR DESCRIPTION
+title: ESP32 asjade õppematerjal
+description: Eestikeelne õppematerjal ESP32 asjade interneti kursusele
 theme: just-the-docs
 
 url: https://karlthefish.github.io/esp32-oppematerjal
