--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ESP32 asjade õppematerjal
+title: ESP32 õppematerjal
 description: Eestikeelne õppematerjal ESP32 asjade interneti kursusele
 theme: just-the-docs
 
